Fix protecting screen not showing

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -675,6 +675,8 @@ header span, header label, header .open_in_chrome_btn {
     height: 100%;
     background-color: rgba(0, 0, 0, 0.8);
     z-index: 2;
+    top: 0;
+    left: 0;
 }
 /*< protecting screen */
 
